# futureproof

./: .env.example  .gitignore  CLAUDE.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  DETAILED_COMMIT_REVIEW.md  FIXES_APPLIED.md  HOOKS_STATUS.md  LICENSE  QWEN.md  README.md  REVIEW_EXECUTIVE_SUMMARY.md  REVIEW_LAST_10_COMMITS.md  ROUND2_COMPLETION.md  ROUND3_COMPLETION.md  SECURITY.md  fu7ur3pr00f-archive-keyring.gpg  index.html  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: apt-release.yml  apt-validate.yml  build-apt.yml  ci.yml  release.yml
.gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gnupg/private-keys-v1.d/: 76AB13EA0898BFCCA456CCA4647086450E371A26.key
.qwen/: settings.json
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
docs/: CNAME  README.md  SOURCES.md  architecture.md  chat_commands.md  configuration.md  cv_generation.md  development.md  gatherers.md  index.html  mcp_clients.md  memory_system.md  prompts.md  robots.txt  scripts.md  sitemap.xml  tools.md  troubleshooting.md
docs/proposals/: AGENT_VALUES.md  FINAL_SUMMARY.md  README.md  diagrams.md  founder-agent.md  multi-agent-architecture.md  multi-agent-design.md  pattern-options.md  values.md  vision-developer-success.md
examples/: blackboard_example.py
scripts/: build_apt_repo.sh  build_deb.sh  clean_dev_artifacts.sh  vagrant_dev_setup.sh  vagrant_test_multi.sh  validate_apt_artifact.sh
src/fu7ur3pr00f/: __init__.py  cli.py  config.py  constants.py  diagnostics.py
src/fu7ur3pr00f/_config/: __init__.py  location_aliases.json  routing_keywords.json
src/fu7ur3pr00f/agents/: career_agent.py  middleware.py  multi_agent.py  values.py
src/fu7ur3pr00f/agents/blackboard/: __init__.py  blackboard.py  conversation_graph.py  engine.py  executor.py  findings_schema.py  graph.py  (+3 more)
src/fu7ur3pr00f/chat/: client.py  setup.py  ui.py
src/fu7ur3pr00f/gatherers/: __init__.py  cliftonstrengths.py  cv.py  linkedin.py
src/fu7ur3pr00f/generators/: __init__.py  cv_generator.py
src/fu7ur3pr00f/llm/: fallback.py
src/fu7ur3pr00f/mcp/: devto_client.py  factory.py  financial_client.py  github_client.py  himalayas_client.py  hn_client.py  http_client.py  job_schema.py  jobicy_client.py  jobspy_client.py  pool.py  remoteok_client.py  remotive_client.py  stackoverflow_client.py  tavily_client.py  weworkremotely_client.py
src/fu7ur3pr00f/memory/: checkpointer.py  chromadb_store.py  chunker.py  embeddings.py  knowledge.py  profile.py
src/fu7ur3pr00f/plans/: product-direction.md
src/fu7ur3pr00f/prompts/: __init__.py  builders.py
src/fu7ur3pr00f/services/: gatherer_service.py
src/fu7ur3pr00f/utils/: logging.py
src/futureproof/: cli.py  config.py
src/futureproof/agents/: __init__.py  career_agent.py  middleware.py  orchestrator.py  state.py  tools.py
src/futureproof/chat/: __init__.py  client.py  setup.py  ui.py
src/futureproof/daemon/: __init__.py  insights.py  scheduler.py  server.py
src/futureproof/gatherers/: __init__.py  base.py  cliftonstrengths.py  github.py  gitlab.py  linkedin.py
src/futureproof/generators/: __init__.py  cv_generator.py
src/futureproof/llm/: __init__.py  azure.py  base.py  factory.py  fallback.py  gemini.py  groq.py
src/futureproof/mcp/: __init__.py  base.py  brave_client.py  devto_client.py  dice_client.py  factory.py  financial_client.py  github_client.py  gitlab_client.py  himalayas_client.py  hn_client.py  http_client.py  job_schema.py  jobicy_client.py  jobspy_client.py  pool.py  remoteok_client.py  remotive_client.py  salary_parser.py  stackoverflow_client.py  tavily_client.py  weworkremotely_client.py
src/futureproof/memory/: __init__.py  checkpointer.py  chromadb_store.py  chunker.py  embeddings.py  episodic.py  knowledge.py  profile.py  store.py
src/futureproof/plans/: product-direction.md
src/futureproof/prompts/: __init__.py  builders.py  loader.py  system.py  templates.py
src/futureproof/services/: __init__.py  analysis_service.py  career_service.py  exceptions.py  gatherer_service.py  generation_service.py  knowledge_service.py
src/futureproof/tools/: __init__.py  market.py
src/futureproof/utils/: __init__.py  async_bridge.py  data_loader.py  llm.py  logging.py  security.py
src/futureproof/validation/: __init__.py  models.py
tests/: __init__.py  conftest.py  e2e_prompt.md  test_cli.py  test_cold_start_protocol.py  test_config.py  test_cv_gatherer.py  test_cv_generator.py  test_data_loader.py  test_diagnostics.py  test_fallback.py  test_knowledge_service.py  test_linkedin_gatherer.py  test_llm_invoker.py  test_mcp_clients.py  test_middleware.py  test_prompts.py  test_security.py  test_settings.py
tests/agents/blackboard/: test_blackboard.py
tests/agents/specialists/: test_agents.py
tests/benchmarks/: test_multi_agent.py
tests/gatherers/: __init__.py  test_html_extractor.py  test_markdown_writer.py
vagrant/: README.md  Vagrantfile.dev
(+102 files in other folders)
