[project]
name = "futureproof"
version = "0.1.0"
description = "Career intelligence system - gather professional data, generate CVs, analyze career alignment"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-2.0-only"
dependencies = [
    # Core
    "typer>=0.15",
    "pydantic-settings>=2",
    "rich>=14",
    # AI/LLM
    "langchain>=0.3",
    "langgraph>=0.3",
    "langchain-openai>=0.3",
    # Data gathering
    "httpx>=0.28",
    "beautifulsoup4>=4",
    # MCP (Model Context Protocol)
    "mcp>=1.26",
    "nest-asyncio>=1.6",
    # Generation
    "jinja2>=3",
    "weasyprint>=62",
    "markdown>=3.10.1",
    "python-jobspy>=1.1.82",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "prompt-toolkit>=3.0.52",
    "chromadb>=1.4.1",
]

[project.scripts]
futureproof = "futureproof.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/futureproof"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8",
    "ruff>=0.9",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-pyyaml>=6.0.12.20250915",
]
